# school-mergers-refactor

./: .gitignore  README.md  dispatch.sh  pyproject.toml  run_batch.sh  run_batch_discovery.sh  run_jobs.py
dashboard/: .gitignore  README.md  eat.py  headers.py  logger.py  main.py  make_figs.py  maps.py  morans_i.py  outlines.py  requirements.txt  requirements_sphinx.txt  summarize.py
dashboard/data/: state_codes.csv
dashboard/docs/: README.md  conf.py  index.rst  requirements.txt
dashboard/figs/: __init__.py  dissimilarity.py  enrollment.py  headers.py  premake.py  travel_times.py  wc_bhwa.py
dashboard/figure_output/: results_top_200_by_population_constrained_0.2.csv  results_top_200_by_population_constrained_bh_wa_0.2.csv
mergers_core/: README.md  compute_stats.py  consolidate.sh  consolidate_deduplicate.py  dispatch.sh  graph.ipynb  manual_stats_checkings.ods  migrate_analytics_files.py  requirements.txt  run_batch.sh
mergers_core/analysis/: analyze_districts.py  analyze_results.py  graph.ipynb
mergers_core/models/: config.py  constants.py  merge_cp_sat.py  model_utils.py  simulation_sweeps.py
mergers_core/utils/: compute_travel_times.py  distances_and_times.py  format_constraint.py  header.py  output_block_estimates.py  produce_files_for_solver.py  split_shapedata_by_district.py
