[project]
name = "public-school-mergers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "black>=25.9.0",
    "colored>=2.3.1",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "haversine>=2.9.0",
    "jupyter>=1.1.1",
    "libpysal>=4.13.0",
    "numpy>=2.3.4",
    "openrouteservice>=2.3.3",
    "orjson>=3.11.4",
    "ortools>=9.14.6206",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "st-theme>=1.2.3",
    "statsmodels>=0.14.5",
    "streamlit>=1.50.0",
    "svglib>=1.6.0",
    "tldextract>=5.3.0",
    "tqdm>=4.67.1",
    "us>=3.2.0",
]
